WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239123
Complement implementation of step 5.5 of
https://fetch.spec.whatwg.org/#http-fetch
https://bugs.webkit.org/show_bug.cgi?id=239123
Summary
Complement implementation of step 5.5 of https://fetch.spec.whatwg.org/#http-...
youenn fablet
Reported
2022-04-12 05:51:33 PDT
Complement implementation of step 5.5 of
https://fetch.spec.whatwg.org/#http-fetch
Attachments
Patch
(10.49 KB, patch)
2022-04-12 05:52 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(10.48 KB, patch)
2022-04-13 01:31 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-04-12 05:52:47 PDT
Created
attachment 457328
[details]
Patch
Darin Adler
Comment 2
2022-04-12 12:53:56 PDT
Comment on
attachment 457328
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=457328&action=review
> Source/WebCore/workers/service/context/ServiceWorkerFetch.cpp:56 > + return ResourceError { errorDomainWebKitInternal, 0, response.url(), "Response served by service worker is cors while mode is same origin"_s, ResourceError::Type::AccessControl, ResourceError::IsSanitized::Yes };
Should error message say "CORS" instead of "cors"?
youenn fablet
Comment 3
2022-04-13 01:31:52 PDT
Created
attachment 457514
[details]
Patch for landing
youenn fablet
Comment 4
2022-04-13 01:33:33 PDT
(In reply to Darin Adler from
comment #2
)
> Comment on
attachment 457328
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=457328&action=review
> > > Source/WebCore/workers/service/context/ServiceWorkerFetch.cpp:56 > > + return ResourceError { errorDomainWebKitInternal, 0, response.url(), "Response served by service worker is cors while mode is same origin"_s, ResourceError::Type::AccessControl, ResourceError::IsSanitized::Yes }; > > Should error message say "CORS" instead of "cors"?
Right, I updated the error message
EWS
Comment 5
2022-04-13 03:40:42 PDT
Committed
r292804
(
249586@main
): <
https://commits.webkit.org/249586@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 457514
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-04-13 03:41:17 PDT
<
rdar://problem/91680481
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug