Complement implementation of step 5.5 of https://fetch.spec.whatwg.org/#http-fetch https://bugs.webkit.org/show_bug.cgi?id=239123

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

* web-platform-tests/service-workers/service-worker/fetch-response-taint.https-expected.txt:

Source/WebCore:

Covered by rebased test.

* workers/service/context/ServiceWorkerFetch.cpp:
(WebCore::ServiceWorkerFetch::validateResponse):

Canonical link: https://commits.webkit.org/249586@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292804 268f45cc-cd09-0410-ab3c-d52691b4dbfc